[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-clerk"
dynamic = ["version"]
description = 'Django Integration for Clerk Auth Platform'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "James Thigpen", email = "james.r.thigpen@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Django>=4.0",
  "PyJWT>=2.8",
]

[project.urls]
Documentation = "https://github.com/yesawoo/django-clerk#readme"
Issues = "https://github.com/yesawoo/django-clerk/issues"
Source = "https://github.com/yesawoo/django-clerk"

[tool.hatch.version]
path = "src/django_clerk/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/django_clerk tests}"

[tool.coverage.run]
source_pkgs = ["django_clerk", "tests"]
branch = true
parallel = true
omit = [
  "src/django_clerk/__about__.py",
]

[tool.coverage.paths]
django_clerk = ["src/django_clerk", "*/django-clerk/src/django_clerk"]
tests = ["tests", "*/django-clerk/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
